--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+ce<html>
   <head>
     <link href="style.css" rel="stylesheet"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
@@ -10,6 +10,6 @@
   <i class="fas fa-qrcode"></i>  <p>Welcome to my page!</p>
   <a href="https://instagram.com/andrewschirrmeister"><i class="fab fa-instagram"></i> Instagram <i class="fab fa-instagram"></i></a>
   <a href="https://github.com/andrewschirrmeister" target="_blank"><i class="fab fa-github"></i> Github <i class="fab fa-github"></i></a>
-  <a href="https://github.com/andrewschirrmeister" target="_blank"><i class="fab fa-behance"></i> Behance <i class="fab fa-behance"></i></a>
+  <a href="https://behance.com/andrewschirrmeister" target="_blank"><i class="fab fa-behance"></i> Behance <i class="fab fa-behance"></i></a>
  </body>
 </html>
