--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-ce<html>
+<html lang="pt-br">
   <head>
-    <link href="style.css" rel="stylesheet"/>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
+    <meta charset="utf-8">
+    <link href="style.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   </head>
  <body>
-  <br><h1>Andrew</h1>
-  <img src="https://img001.prntscr.com/file/img001/rj8WSg6jQrWviR1kw5nwLA.png" width="125" />
-  <h2>I'm a professional designer graphic</h2>
-  <i class="fas fa-qrcode"></i>  <p>Welcome to my page!</p>
-  <a href="https://instagram.com/andrewschirrmeister"><i class="fab fa-instagram"></i> Instagram <i class="fab fa-instagram"></i></a>
-  <a href="https://github.com/andrewschirrmeister" target="_blank"><i class="fab fa-github"></i> Github <i class="fab fa-github"></i></a>
-  <a href="https://behance.com/andrewschirrmeister" target="_blank"><i class="fab fa-behance"></i> Behance <i class="fab fa-behance"></i></a>
+  <br><h1>Andrew Schirrmeister</h1>
+  <img alt="Foto" src="https://img001.prntscr.com/file/img001/xLVgg4MLQkCB6vaC6EHMww.png" width="125" />
+  <h2>Profissional formado em Design Gráfico com especialização em UI/UX e habilidades em programação front-end.</h2>
+  <a rel="instagram" href="https://instagram.com/andrewschirrmeister"><i class="fab fa-instagram"></i> Instagram</a>
+  <a rel="noopener" href="https://github.com/andrewschirrmeister" target="_blank"><i class="fab fa-github"></i> Github</a>
+  <a rel="noopener" href="https://behance.com/andrewschirrmeister" target="_blank"><i class="fab fa-behance"></i> Behance</a>
  </body>
 </html>
