--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
   <a rel="instagram" href="https://instagram.com/andrewschirrmeister"><i class="fab fa-instagram"></i> Instagram</a>
   <a rel="noopener" href="https://github.com/andrewschirrmeister" target="_blank"><i class="fab fa-github"></i> Github</a>
   <a rel="noopener" href="https://behance.com/andrewschirrmeister" target="_blank"><i class="fab fa-behance"></i> Behance</a>
+  <footer>
+    &copy; 2025 Andrew Schirrmeister - Todos os direitos reservados.
+  </footer>
  </body>
 </html>
