--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
+<!DOCTYPE html>
 <html lang="pt-br">
-  <head>
+<head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Andrew Schirrmeister | Designer & Front-end</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-  </head>
- <body>
-  <br><h1>Andrew Schirrmeister</h1>
-  <img alt="Foto" src="https://img001.prntscr.com/file/img001/xLVgg4MLQkCB6vaC6EHMww.png" width="125" />
-  <h2>Profissional formado em Design Gráfico com especialização em UI/UX e habilidades em programação front-end.</h2>
-  <a rel="instagram" href="https://instagram.com/andrewschirrmeister"><i class="fab fa-instagram"></i> Instagram</a>
-  <a rel="noopener" href="https://github.com/andrewschirrmeister" target="_blank"><i class="fab fa-github"></i> Github</a>
-  <a rel="noopener" href="https://behance.com/andrewschirrmeister" target="_blank"><i class="fab fa-behance"></i> Behance</a>
-  <footer>
-    &copy; 2025 Andrew Schirrmeister - Todos os direitos reservados.
-  </footer>
- </body>
+</head>
+<body>
+    <main>
+        <br>
+        <h1>Andrew Schirrmeister</h1>
+        <img alt="Foto de perfil de Andrew Schirrmeister" src="https://img001.prntscr.com/file/img001/xLVgg4MLQkCB6vaC6EHMww.png" width="125" />
+        <h2>Designer Gráfico | Especialista em UI/UX | Programador Front-end</h2>
+        
+        <div class="links-container">
+            <a rel="noopener" href="https://instagram.com/andrewschirrmeister" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
+            <a rel="noopener" href="https://github.com/andrewschirrmeister" target="_blank"><i class="fab fa-github"></i> Github</a>
+            <a rel="noopener" href="https://behance.net/andrewschirrmeister" target="_blank"><i class="fab fa-behance"></i> Behance</a>
+        </div>
+    </main>
+    <footer>
+        &copy; 2025 Andrew Schirrmeister - Todos os direitos reservados.
+    </footer>
+</body>
 </html>
