--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <br>
         <h1>Andrew Schirrmeister</h1>
-        <img alt="Foto de perfil de Andrew Schirrmeister" src="https://img001.prntscr.com/file/img001/xLVgg4MLQkCB6vaC6EHMww.png" width="125" />
+        <img alt="Foto de perfil de Andrew Schirrmeister" src="https://avatars.githubusercontent.com/u/126293222" width="125" />
         <h2>Designer Gráfico | Especialista em UI/UX | Programador Front-end</h2>
         
         <div class="links-container">
